--- a/UILayer/Views/CreateTour.xaml
+++ b/UILayer/Views/CreateTour.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TourPlanner.UILayer.Views"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="550" d:DesignWidth="800"
       Title="TourPlanner" Height="550" Width="800"
       Background="Transparent">
 
@@ -120,7 +120,7 @@
                 <StackPanel Grid.Row="1"
                             Width="250"
                             Orientation="Vertical"
-                            Margin="0,5,0,0">
+                            Margin="0,20,0,0">
 
                     <TextBlock Text="Create a new Tour"
                                Foreground="White"
@@ -157,13 +157,11 @@
                                FontWeight="Medium"
                                Margin="0,8,0,0"/>
 
-                    <TextBox x:Name="date"
+                    <DatePicker x:Name="date"
                              FontSize="13"
                              FontFamily="Dubai"
                              FontWeight="Medium"
-                             Background="Transparent"
                              Foreground="White"
-                             CaretBrush="LightGray"
                              BorderBrush="DarkGray"
                              BorderThickness="0,0,0,1"
                              Height="28"
@@ -197,18 +195,16 @@
                                FontWeight="Medium"
                                Margin="0,8,0,0"/>
 
-                    <TextBox x:Name="from"
-                             FontSize="13"
-                             FontFamily="Dubai"
-                             FontWeight="Medium"
-                             Background="Transparent"
-                             Foreground="White"
-                             CaretBrush="LightGray"
-                             BorderBrush="DarkGray"
-                             BorderThickness="0,0,0,1"
-                             Height="28"
-                             VerticalContentAlignment="Center"
-                             Margin="0,2,0,0"/>
+                    <DatePicker x:Name="from"
+                                FontSize="13"
+                                FontFamily="Dubai"
+                                FontWeight="Medium"
+                                Foreground="White"
+                                BorderBrush="DarkGray"
+                                BorderThickness="0,0,0,1"
+                                Height="28"
+                                VerticalContentAlignment="Center"
+                                Margin="0,2,0,0"/>
 
                     <TextBlock Text="To"
                                Foreground="White"
@@ -217,18 +213,16 @@
                                FontWeight="Medium"
                                Margin="0,8,0,0"/>
 
-                    <TextBox x:Name="to"
-                             FontFamily="Dubai"
-                             FontSize="13"
-                             FontWeight="Medium"
-                             Background="Transparent"
-                             Foreground="White"
-                             CaretBrush="LightGray"
-                             BorderBrush="DarkGray"
-                             BorderThickness="0,0,0,1"
-                             Height="28"
-                             VerticalContentAlignment="Center"
-                             Margin="0,2,0,0"/>
+                    <DatePicker x:Name="to"
+                                FontSize="13"
+                                FontFamily="Dubai"
+                                FontWeight="Medium"
+                                Foreground="White"
+                                BorderBrush="DarkGray"
+                                BorderThickness="0,0,0,1"
+                                Height="28"
+                                VerticalContentAlignment="Center"
+                                Margin="0,2,0,0"/>
 
                     <TextBlock Text="Transport Type"
                                FontFamily="Dubai"
@@ -249,26 +243,19 @@
                              Height="28"
                              VerticalContentAlignment="Center"
                              Margin="0,2,0,0"/>
-                </StackPanel>
-
-                <Grid Grid.Row="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="200"/>
-                    </Grid.ColumnDefinitions>
 
                     <Button Grid.Column="2"
-                            x:Name="buttonSubmit"
-                            BorderThickness="0"
-                            Content="Create Tour"
-                            Foreground="White"
-                            FontFamily="Dubai"
-                            FontSize="16"
-                            Cursor="Hand"
-                            VerticalAlignment="Bottom"
-                            Margin="0,0,0,25"
-                            VerticalContentAlignment="Center">
-                        
+                           x:Name="buttonSubmit"
+                           BorderThickness="0"
+                           Content="Create Tour"
+                           Foreground="White"
+                           FontFamily="Dubai"
+                           FontSize="16"
+                           Cursor="Hand"
+                           VerticalAlignment="Bottom"
+                           Margin="0,30,0,0"
+                           VerticalContentAlignment="Center">
+
                         <Button.Style>
                             <Style TargetType="Button">
                                 <Setter Property="Background" Value="#DA34AE"/>
@@ -283,16 +270,16 @@
                         <Button.Template>
                             <ControlTemplate TargetType="Button">
                                 <Border Width="120" Height="40"
-                                        CornerRadius="20"
-                                        Background="{TemplateBinding Background}">
+                                       CornerRadius="20"
+                                       Background="{TemplateBinding Background}">
                                     <ContentPresenter VerticalAlignment="Center"
-                                                      HorizontalAlignment="Center"/>
+                                                     HorizontalAlignment="Center"/>
                                 </Border>
                             </ControlTemplate>
                         </Button.Template>
                     </Button>
-                </Grid>
-
+                    
+                </StackPanel>
             </Grid>
         </Border>
     </Border>
