--- a/UILayer/Views/MainWindow.xaml
+++ b/UILayer/Views/MainWindow.xaml
@@ -39,20 +39,24 @@
 
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="40"/>
-                    <RowDefinition Height="40"/>
                     <RowDefinition Height="30"/>
-                    <RowDefinition Height="170"/>
-                    <RowDefinition Height="40"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="200"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
+                <Grid Grid.Row="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition Width="25"/>
+                        <ColumnDefinition Width="25"/>
+                        <ColumnDefinition Width="5"/>
+                    </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Column="0" 
+                    <TextBlock Grid.Column="0" 
                                Text="TourPlanner"
                                Foreground="LightCyan"
                                FontSize="16"
@@ -60,73 +64,139 @@
                                VerticalAlignment="Center"
                                Margin="10,0,0,0"/>
 
-                <DockPanel Grid.Row="0" Grid.Column="2" 
-                           VerticalAlignment="Center" 
-                           HorizontalAlignment="Stretch">
-                    <RadioButton Content="File"
-                                 Foreground="White"
-                                 FontSize="16"
-                                 Width="100"
-                                 HorizontalAlignment="Stretch"/>
-                    <RadioButton Content="Edit"
-                                 Foreground="White"
-                                 FontSize="16"
-                                 Width="100"
-                                 HorizontalAlignment="Stretch"/>
-                    <RadioButton Content="Options"
-                                 Foreground="White"
-                                 FontSize="16"
-                                 Width="120"
-                                 HorizontalAlignment="Stretch"/>
-                    <RadioButton Content="Help"
-                                 Foreground="White"
-                                 FontSize="16"
-                                 HorizontalAlignment="Stretch"/>
-                </DockPanel>
+                    <Button Grid.Column="6"
+                            x:Name="buttonMinimize"
+                            BorderThickness="0"
+                            Content="-"
+                            Foreground="White"
+                            FontSize="15"
+                            Cursor="Hand">
 
-                <Label Grid.Row="1" 
-                       Grid.Column="0"
-                       Content="Tours"
-                       Margin="10,0,0,0"
-                       Foreground="White"
-                       FontSize="16"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Left"/>
+                        <Button.Style>
+                            <Style TargetType="Button">
+                                <Setter Property="Background" Value="#28AEED"/>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="#278BEF"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>
 
-                <StackPanel Grid.Row="1"
-                            Grid.Column="0"
-                            HorizontalAlignment="Right"
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Border Width="20" Height="20"
+                                        CornerRadius="10"
+                                        Background="{TemplateBinding Background}">
+                                    <ContentPresenter VerticalAlignment="Center"
+                                                      HorizontalAlignment="Center"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+
+                    <Button Grid.Column="7"
+                            x:Name="buttonClose"
+                            BorderThickness="0"
+                            Content="X"
+                            Foreground="White"
+                            FontSize="12"
+                            Cursor="Hand"
+                            VerticalContentAlignment="Center">
+                        <Button.Style>
+                            <Style TargetType="Button">
+                                <Setter Property="Background" Value="#DA34AE"/>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="#C62DAE"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>
+
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Border Width="20" Height="20"
+                                        CornerRadius="10"
+                                        Background="{TemplateBinding Background}">
+                                    <ContentPresenter VerticalAlignment="Center"
+                                                      HorizontalAlignment="Center"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+
+                    <Button Grid.Column="1"
+                            Content="File"
+                            FontFamily="Dubai"
+                            FontSize="14"
                             VerticalAlignment="Center"
-                            Orientation="Horizontal">
-                    <Button Content="+"
-                            Foreground="Black"
-                            FontSize="16"
-                            Command="{Binding AddTourCommand}"/>
-                    <Button Content="-"
-                            Foreground="Black"
-                            FontSize="16"
-                            Command="{Binding DeleteTourCommand}"/>
-                    <Button Content="..."
-                            Foreground="Black"
-                            FontSize="16"/>
-                </StackPanel>
+                            BorderThickness="0"/>
+                    
+                    <Button Grid.Column="2" 
+                            Content="Edit"
+                            FontFamily="Dubai"
+                            FontSize="14"
+                            VerticalAlignment="Center"
+                            BorderThickness="0"/>
+                    
+                    <Button Grid.Column="3" 
+                            Content="Options"
+                            FontFamily="Dubai"
+                            FontSize="14"
+                            VerticalAlignment="Center"
+                            BorderThickness="0"/>
 
-                <StackPanel Grid.Row="1"
-                            Grid.Column="1" 
-                            Orientation="Horizontal"
-                            VerticalAlignment="Center">
-                    <RadioButton Content="General"
-                     Foreground="White"
-                     FontSize="16"/>
-                    <RadioButton Content="Route"
-                     Foreground="White"
-                     FontSize="16"/>
-                    <RadioButton Content="Misc"
-                     Foreground="White"
-                     FontSize="16"/>
-                </StackPanel>
+                    <Button Grid.Column="4" 
+                            Content="Help"
+                            FontFamily="Dubai"
+                            FontSize="14"
+                            VerticalAlignment="Center"
+                            BorderThickness="0"/>
+                </Grid>
 
-                <TextBox Grid.Row="2"
+                <Grid Grid.Row="1">
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="250"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="30"/>
+                            <RowDefinition Height="30"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+
+                        <TextBlock Grid.Row="0" 
+                                   Text="Tours"
+                                   Margin="10,0,0,0"
+                                   Foreground="White"
+                                   FontSize="16"
+                                   FontFamily="Dubai"
+                                   VerticalAlignment="Center"
+                                   HorizontalAlignment="Left"/>
+
+                        <StackPanel Grid.Row="0"
+                                    Grid.Column="0"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Center"
+                                    Orientation="Horizontal">
+                                    <Button Content="+"
+                                    Foreground="Black"
+                                    FontSize="16"
+                                    Command="{Binding AddTourCommand}"/>
+                                    <Button Content="-"
+                                    Foreground="Black"
+                                    FontSize="16"
+                                    Command="{Binding DeleteTourCommand}"/>
+                                    <Button Content="..."
+                                    Foreground="Black"
+                                    FontSize="16"/>
+                        </StackPanel>
+
+                        <TextBox Grid.Row="1"
                          Grid.Column="0"
                          Text="Search" 
                          TextChanged="TextBox_TextChanged"
@@ -134,31 +204,58 @@
                          Padding="12,0,10,0"
                          Background="AliceBlue"/>
 
-                <Label Grid.Column="1"
-                       Grid.Row="4" 
-                       Content="Tour Logs"
-                       Foreground="White"
-                       FontSize="16"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Left"/>
+                    </Grid>
 
-                <StackPanel Grid.Row="4"
-                            Grid.Column="1"
-                            HorizontalAlignment="Right"
-                            VerticalAlignment="Center"
-                            Orientation="Horizontal"
-                            Margin="0,0,20,0">
-                    <Button Content="+"
-                            Foreground="Black"
-                            FontSize="16"/>
-                    <Button Content="-"
-                            Foreground="Black"
-                            FontSize="16"/>
-                    <Button Content="..."
-                            Foreground="Black"
-                            FontSize="16"/>
-                </StackPanel>
+                    <Grid Grid.Column="1">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="30"/>
+                            <RowDefinition Height="230"/>
+                            <RowDefinition Height="30"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
 
+                        <StackPanel Grid.Row="0"
+                                    Orientation="Horizontal"
+                                    VerticalAlignment="Center">
+                            <RadioButton Content="General"
+                                         Foreground="White"
+                                         FontSize="16"/>
+                            <RadioButton Content="Route"
+                                         Foreground="White"
+                                         FontSize="16"/>
+                            <RadioButton Content="Misc"
+                                         Foreground="White"
+                                         FontSize="16"/>
+                        </StackPanel>
+
+                        <TextBlock Grid.Row="2" 
+                                   Text="Tour Logs"
+                                   Margin="10,0,0,0"
+                                   Foreground="White"
+                                   FontSize="16"
+                                   FontFamily="Dubai"
+                                   VerticalAlignment="Center"
+                                   HorizontalAlignment="Left"/>
+
+                        <StackPanel Grid.Row="2"
+                                    Grid.Column="1"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Center"
+                                    Orientation="Horizontal"
+                                    Margin="0,0,20,0">
+                                    <Button Content="+"
+                                    Foreground="Black"
+                                    FontSize="16"/>
+                                    <Button Content="-"
+                                    Foreground="Black"
+                                    FontSize="16"/>
+                                    <Button Content="..."
+                                    Foreground="Black"
+                                    FontSize="16"/>
+                        </StackPanel>
+                        
+                    </Grid>
+                </Grid>
             </Grid>
         </Border>
     </Border>
